syntax = "proto3";

service PetProto{
  rpc CreatePetLists (CreatePetListsRequest) returns (CreatePetListsReply);
  rpc DeleteUserPets (DeleteUserPetsRequest) returns (DeleteUserPetsReply);
}

message CreatePetListsRequest{
  string userId = 1;
}

message DeleteUserPetsRequest{
  string userId = 1;
}

message CreatePetListsReply{}

message DeleteUserPetsReply{}